--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ terraform_validate:
 terraform_plan:
   stage: iac_plan
   script:
-    - terraform plan --out "terraform.tfplan"
+    - terraform plan -out "terraform.tfplan"
   only:
     refs:
       - main
@@ -47,7 +47,7 @@ terraform_plan:
 terraform_apply:
   stage: iac_apply
   script:
-    - terraform apply --auto-approve -input=false -state="terraform.tfplan"
+    - terraform apply --auto-approve "terraform.tfplan"
   when: manual
   allow_failure: false
   only:
