add terraform destroy to pipeline

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -54,3 +54,13 @@ terraform_apply:
   only:
     refs:
       - main
+
+terraform_destroy:
+  stage: iac_apply
+  script:
+    - terraform destroy --auto-approve "terraform.tfplan"
+  when: manual
+  allow_failure: false
+  only:
+    refs:
+      - main
