--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,8 +9,7 @@ variables:
 stages:
   - iac_validate
   - iac_plan
-  - iac_apply
-  - iac_destroy
+  - iac_apply_destroy
 
 default:
   image:
@@ -57,7 +56,7 @@ terraform_apply:
       - main
 
 terraform_destroy:
-  stage: iac_destroy
+  stage: iac_apply_destroy
   script:
     - terraform destroy --auto-approve "terraform.tfplan"
   when: manual
