--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -46,7 +46,7 @@ terraform_plan:
       - ${TF_ROOT}/terraform.tfplan
 
 terraform_apply:
-  stage: iac_apply
+  stage: iac_apply_destroy
   script:
     - terraform apply --auto-approve "terraform.tfplan"
   when: manual
