--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -71,7 +71,7 @@ terraform_apply:
 terraform_destroy:
   stage: iac_apply_destroy
   script:
-    - terraform apply --auto-approve "terraform-destroy.tfplan"
+    - terraform apply -destroy --auto-approve "terraform-destroy.tfplan"
   when: manual
   only:
     refs:
