--- a/ansible/deploy-docker-newuser.yaml
+++ b/ansible/deploy-docker-newuser.yaml
@@ -15,7 +15,7 @@
 
 
 - name: Install python3, docker, docker-compose
-  hosts: aws_ec2
+  hosts: all
   become: yes
   gather_facts: False
   tasks:
@@ -45,7 +45,7 @@
 
 
 - name: Create new linux user
-  hosts: aws_ec2
+  hosts: all
   become: yes
   vars_files:
     - project-vars
@@ -53,10 +53,10 @@
     - name: Create new linux user
       user:
         name: awsuser
-        groups: "{{user_groups}}"
+        groups: adm, docker
 
 - name: Start Docker container
-  hosts: aws_ec2
+  hosts: all
   become: yes
   become_user: awsuser
   tasks:
