update ansible file

--- a/ansible/deploy-docker-newuser.yaml
+++ b/ansible/deploy-docker-newuser.yaml
@@ -1,6 +1,6 @@
 ---
 - name: Wait for ssh connection
-  hosts: aws_ec2
+  hosts: all
   gather_facts: False
   tasks:
     - name: Ensure ssh port open
